removed earlier change alignment issue #61 #62

--- a/src/pages/Lyrics.css
+++ b/src/pages/Lyrics.css
@@ -197,15 +197,6 @@
 /* Word by word lyric related */
 .lyrics-page.synced > .lyrics-line > .text:has(> .lyric-word) {
     opacity: 1;
-    /* Extra spacing between each word */
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: 2px;
-}
-
-/* Because of flex from above */
-.lyrics-page.synced > .lyrics-line > .text.centered:has(> .lyric-word) {
-    justify-content: center;
 }
 
 .lyrics-page.synced > .lyrics-line.active > .text:has(> .lyric-word.active) {
@@ -265,7 +256,7 @@
 
 /* Add extra space for spaced words */
 .lyrics-page.synced > .lyrics-line > .text > .lyric-word.space {
-    margin-right: 0.475rem;
+    margin-right: 0.25rem;
 }
 
 /* Past words in non-active lines */
